Changelog
=========


1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2015-09-30)
------------------

- Initial implementation
  [jone]