@@ -5,7 +5,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Remove duplicate icon in search results for files.
+  [jone]
 
 
 1.0.0 (2015-09-30)
